<resources>
    <string name="hint_identificacion">Identificación</string>
    <string name="app_name">ciclosDeVida</string>
    <string name="hint_User">Usuario</string>
    <string name="hint_Password">Password</string>
    <string name="btn_Registro">Registrarse</string>
    <string name="txtInfo">Alarma</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_Apellidos">Apellidos</string>
    <string name="registro">Registro</string>
    <string name="hint_celular">Celular</string>
    <string name="et_correo">Correo</string>
    <string name="et_confirmar">Confirm Password</string>
    <string name="iv_foto">Tomar foto</string>
    <string name="tvBienvenida">Bienvenid@</string>
    <string name="btn_guardar">Guardar</string>
    <string name="hint_dentificacion">Identificacion</string>
    <string name="btn_elegir">Elegir foto</string>
    <string name="im_imagen"></string>
    <string name="et_hora">Hora</string>
    <string name="tv_alarma">Programar Alarma</string>
    <string name="et_minuto">Minuto</string>
    <string name="et_dias">Dias</string>
    <string name="btn_programar">Programar</string>
    <string name="tv_guardar_celular">Guardar contacto</string>
    <string name="et_nombre_contacto">Nombre</string>
    <string name="et_telefono_contacto">Telefono</string>
    <string name="hint_confirmarPassword">Confirm Password</string>
    <string name="hint_nombre_alarma">Nombrar Alarma</string>
    <string name="rb_am">AM</string>
    <string name="rb_pm">PM</string>
</resources>