<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#91A9B6">

    <TextView
        android:id="@+id/tvLogLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="30dp"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="#814545"
        android:text="@string/registro"

        >

    </TextView>


    <EditText
        android:id="@+id/etIdentificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLogLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:hint="@string/hint_identificacion"
        android:textColorHint="@color/white"
        android:inputType="number"
        >

    </EditText>
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etIdentificacion"
        android:layout_margin="10dp"
        android:hint="@string/et_Nombres"
        android:textColorHint="@color/white">
    </EditText>



    <EditText
        android:id="@+id/etLoginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNombre"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/hint_User"
        android:textColorHint="@color/white">

    </EditText>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLoginUser"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/vector_lock_24"
        android:hint="@string/Hint_Password"
        android:inputType="textPassword"
        android:textColorHint="@color/white">

    </EditText>

    <EditText
        android:id="@+id/etConfirmarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLoginPassword"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/vector_lock_24"
        android:hint="@string/et_confirmar"
        android:inputType="textPassword"
        android:textColorHint="@color/white">

    </EditText>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/etConfirmarPassword"
        android:backgroundTint="#B52150"
        android:text="@string/btn_Registro"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        >

    </Button>

</RelativeLayout>